DEVOCIONAL EN ESPAÑOL

--- a/cloudcode/public/aviso.htm
+++ b/cloudcode/public/aviso.htm
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html><head>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Untitled Document</title>
-    <style type="text/css">
+    
+    <title>Untitled Document</title><style type="text/css">
 .aa {
 	font-family: Kepler Std Medium;
 }
@@ -15,29 +14,19 @@ body {
 body,td,th {
 	color: rgba(141,102,95,1);
 }
-</style>
-  </head>
+</style></head>
+
   <body>
     <h3>R07D<br>
       <span class="aa"></span></h3>
-    <h3><span class="aa">Aviso Importante <br>
-      </span></h3>
-    <h3><span class="aa">Important Notice&nbsp;</span></h3>
-    <br>
-    En el día de ayer tuvimos varias caídas en el servidor, pedimos
-    disculpas por los inconvenientes causados.<br>
-    Si le presenta errores la aplicación, favor des-instalar y
-    reinstalar nuevamente.<br>
-    <br>
-    Yesterday we had several server outages, we´re sorry for any
-    inconvenience. If app continues to show errors, <br>
-    please uninstall and reinstall it again.<br>
-    <br>
+    
+    <h3><span class="aa">Aviso Importante / Important Notice&nbsp;</span></h3>
+    A partir de mañana podran disfrutar de un devocional en español, patrocinado por: <a href="http://intercesora.co">www.intercesora.co</a><br><br>
+    Starting tomorrow youl'll have the chance to enjoy a spanish devotional sponsored by: <a href="http://intercesora.co">www.intercesora.co</a> &nbsp;, &nbsp;Still waiting for an english one...Can you write it?<br><br>
     <p align="justify">Bendiciones!!&nbsp;&nbsp; Blessings!!<br>
     </p>
     <p align="justify">“Lámpara es a mis pies tu palabra, y lumbrera a
       mi camino (Salmo 119:105)"</p>
     <p><a href="http://bible.com/127/ecc.2.12.ntv"></a><br>
     </p>
-  </body>
-</html>
+  </body></html>
