FIXING LINKS LAST DEVO

--- a/cloudcode/public/245.htm
+++ b/cloudcode/public/245.htm
@@ -50,13 +50,14 @@ body,td,th {
       echar diariamente la red para ver tu poder y tu gloria.&nbsp;
       Gracias en el nombre de Jesús.&nbsp; Amén</big><br>
     <br>
-    <a href="https://bible.com/es-es/127/luk.5.4-6.ntv">Lucas 5:4-6</a><br>
-    <a href="https://bible.com/es-es/127/jhn.11.40.ntv">Juan 11:40</a><br>
-    <a href="https://bible.com/es-es/127/mrk.9.23.ntv">Marcos 9:23</a><br>
-    <a href="https://bible.com/es-es/127/luk.1.37.ntv">Lucas 1:37</a><br>
+    <a href="https://bible.com/127/luk.5.4-6.ntv">Lucas 5:4-6</a><br>
+    <a href="https://bible.com/127/jhn.11.40.ntv">Juan 11:40</a><br>
+    <a href="https://bible.com/127/mrk.9.23.ntv">Marcos 9:23</a><br>
+    <a href="https://bible.com/127/luk.1.37.ntv">Lucas 1:37</a><br>
     <br>
     <span style="font-size:11.0pt;font-family:
-&quot;Calibri&quot;,&quot;sans-serif&quot;;mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:
+      &quot;Calibri&quot;,&quot;sans-serif&quot;;mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:
+
       minor-latin;mso-bidi-theme-font:minor-latin;mso-ansi-language:ES"
       lang="ES"><big><span style="mso-spacerun:yes"></span></big><o:p></o:p></span>
     <meta name="ProgId" content="Word.Document">
