--- a/cloudcode/public/aviso.htm
+++ b/cloudcode/public/aviso.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html><head>
-
+<html>
+  <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    
-    <title>Untitled Document</title><style type="text/css">
+    <title>Untitled Document</title>
+    <style type="text/css">
 .aa {
 	font-family: Kepler Std Medium;
 }
@@ -14,19 +14,36 @@ body {
 body,td,th {
 	color: rgba(141,102,95,1);
 }
-</style></head>
-
+</style>
+  </head>
   <body>
     <h3>R07D<br>
       <span class="aa"></span></h3>
-    
     <h3><span class="aa">Aviso Importante / Important Notice&nbsp;</span></h3>
-    A partir de mañana podran disfrutar de un devocional en español, patrocinado por: <a href="http://intercesora.co">www.intercesora.co</a><br><br>
-    Starting tomorrow youl'll have the chance to enjoy a spanish devotional sponsored by: <a href="http://intercesora.co">www.intercesora.co</a> &nbsp;, &nbsp;Still waiting for an english one...Can you write it?<br><br>
-    <p align="justify">Bendiciones!!&nbsp;&nbsp; Blessings!!<br>
+    <div align="justify"> La familia R07D esta creciendo, empezamos hace
+      un poco mas de un año y ya son mas de 500 personas las que
+      registran Su Tiempo en El Secreto usando la aplicación, un
+      registro que permanece de por vida!, esperando enseñarle a sus
+      hijos y nietos lo que Dios hizo por ellas en un dia cualquiera...
+      tal vez como hoy.<br>
+    </div>
+    <br>
+    <div align="justify">The R07D family is growing, we started over a
+      year ago and more than 500 people are now saving their time in The
+      Secret using the application, a record for life!, waiting to teach
+      their children and grandchildren about what God did for them , in
+      just any other day..like today.<br>
+      <br>
+      Favor compártala con sus amigos y conocidos! / Please share it
+      with your friends and acquaintances!<br>
+    </div>
+    <br>
+    <p align="justify">Bendiciones!! /&nbsp; Blessings!!<br>
     </p>
     <p align="justify">“Lámpara es a mis pies tu palabra, y lumbrera a
       mi camino (Salmo 119:105)"</p>
-    <p><a href="http://bible.com/127/ecc.2.12.ntv"></a><br>
-    </p>
-  </body></html>
+    <div align="left"><img alt="esp" src="esp.png" height="446"
+        width="251"><img alt="eng" src="eng.png" height="446"
+        width="251"></div>
+  </body>
+</html>
