--- a/cloudcode/public/aviso.htm
+++ b/cloudcode/public/aviso.htm
@@ -21,7 +21,7 @@ body,td,th {
       <span class="aa"></span></h3>
     <h3><span class="aa">Aviso Importante / Important Notice&nbsp;</span></h3>
     <div align="justify"> La familia R07D esta creciendo, empezamos hace
-      un poco mas de un año y ya son mas de 500 personas las que
+      un poco mas de un año y ya son mas de 1000 personas las que
       registran Su Tiempo en El Secreto usando la aplicación, un
       registro que permanece de por vida!, esperando enseñarle a sus
       hijos y nietos lo que Dios hizo por ellas en un dia cualquiera...
@@ -29,10 +29,10 @@ body,td,th {
     </div>
     <br>
     <div align="justify">The R07D family is growing, we started over a
-      year ago and more than 500 people are now saving their time in The
-      Secret using the application, a record for life!, waiting to teach
-      their children and grandchildren about what God did for them , in
-      just any other day..like today.<br>
+      year ago and more than 1000 people are now saving their time in
+      The Secret using the application, a record for life!, waiting to
+      teach their children and grandchildren about what God did for them
+      , in just any other day..like today.<br>
       <br>
       Favor compártala con sus amigos y conocidos! / Please share it
       with your friends and acquaintances!<br>
@@ -42,8 +42,8 @@ body,td,th {
     </p>
     <p align="justify">“Lámpara es a mis pies tu palabra, y lumbrera a
       mi camino (Salmo 119:105)"</p>
-    <div align="left"><img alt="esp" src="esp.png" height="446"
-        width="251"><img alt="eng" src="eng.png" height="446"
-        width="251"></div>
+    <div align="left"><img alt="esp" src="esp.png" width="251"
+        height="446"><img alt="eng" src="eng.png" width="251"
+        height="446"></div>
   </body>
 </html>
